[package]
name = "echo-lib"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"

[dev-dependencies]
uuid = { version = "0.8.1", features = ["serde", "v4"] }
