[package]
name = "recurvedb"
version = "0.1.0"
authors = ["Jeffrey Yu <92849+wehjin@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "recurvedb"
path = "src/lib.rs"

[[bin]]
name = "yumi"
path = "src/bin/yumi/main.rs"

[dependencies]
rand = "0.8.5"
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
serde = "1.0"
serde_derive = "1.0"

[dev-dependencies]
uuid = { version = "1.8.0", features = ["serde", "v4"] }
